@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-08-13T01:05:58Z",
+  "timestamp" : "2025-08-14T01:06:22Z",
   "count_outdated" : 558,
   "uniques_outdated" : 384,
-  "count" : 560,
-  "uniques" : 386,
+  "count" : 567,
+  "uniques" : 393,
   "clones" : [
     {
       "timestamp": "2025-08-10T00:00:00Z",
@@ -22,6 +22,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-08-13T00:00:00Z",
+      "count": 7,
+      "count_minmax": [ 7, 7 ],
+      "count_decinc": [ 0, 7 ],
+      "uniques": 7,
+      "uniques_minmax": [ 7, 7 ],
+      "uniques_decinc": [ 0, 7 ]
     }
   ]
 }
