@@ -1,6 +1,6 @@
 {
-  "count": 2,
-  "uniques": 2,
+  "count": 9,
+  "uniques": 9,
   "clones": [
     {
       "timestamp": "2025-08-10T00:00:00Z",
@@ -11,6 +11,11 @@
       "timestamp": "2025-08-12T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-08-13T00:00:00Z",
+      "count": 7,
+      "uniques": 7
     }
   ]
 }
